name:           demo
version:        0.0.1
synopsis:       Plaid Link integration for Reflex-DOM
category:       Web
maintainer:     Obsidian Systems
copyright:      2018 Obsidian Systems
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

executable demo
  main-is: Main.hs
  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-unused-do-bind
    -O2
  build-depends:
      base
    , reflex-dom
    , reflex-dom-plaid
  default-language: Haskell2010

